--- a/CloudFlare/index.html
+++ b/CloudFlare/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="./CF_files/script.js"></script>
     <link rel="icon" href="./CF_files/favicon.ico">
 </head>
-<body style="opacity: 1;">
+<!--<body style="opacity: 1;">-->
 <div class="header">
     <img id="zg" src="./CF_files/zg.png">
 
